<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:text="@string/Register_text4" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:text="@string/Register_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:autofillHints="useremail"
        android:id="@+id/editTextEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Register_text2"
        android:inputType="textEmailAddress" />

    <EditText
        android:autofillHints="userpassword"
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/Register_text3"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Register_text4" />

    <TextView
        android:text="@string/Register_text5"
        android:id="@+id/textViewSignin"
        android:textAlignment="center"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:id="@+id/textviewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>